<resources>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="part_guest">Guest</string>
    <string name="something_went_wrong">Something went wrong, please try again later</string>
    <string name="question_sure_logout">Are you sure you want sign out?</string>
    <string name="forget_password">Forget Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_">Hello,</string>
    <string name="nice_to_see_you">Nice To See You Again</string>
    <string name="question_forgot_password">Forgot Password?</string>
    <string name="msg_forget_password">"A code will be sent to your email/mobile you can use it to verify your mobile number "</string>
    <string name="submit">Submit</string>
    <string name="phone_number_or_email">Phone Number or Email</string>
    <string name="verification_page">Verification Page</string>
    <string name="msg_phone_verification">Enter the 4-digit verification code</string>
    <string name="enter_4_digital_code">Enter code here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resent_code">Resend code</string>
    <string name="format_remaining_time" translatable="false">%02d:%02d</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify">Verify</string>
    <string name="ok">Ok</string>
    <string name="msg_password_reset">Your password has been reset!</string>
    <string name="conc_hello_">Hello %s</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="msg_account_created">Your account is created Successfully !</string>
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="placeholder_mobile_number" translatable="false">05xxxxxxxx</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="select_country">Select Country</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_address">Select Address</string>
    <string name="loading_">Loading…</string>
    <string name="select_city">Select city</string>
    <string name="select_zipcode">"Select Zip Code "</string>
    <string name="male">Male</string>
    <string name="accept_terms_and_conditions">Accept Terms and conditions</string>
    <string name="general_details">General Details</string>
    <string name="car_details">Car Details</string>
    <string name="hint_car_brand">Car brand ex.BMW</string>
    <string name="submit_request">Submit Request</string>
    <string name="upload_licence">Upload Licence</string>
    <string name="conc_file_size_in_kb" translatable="false">(%dKB)</string>
    <string name="upload_car_front_with_plate_image">Upload Car Front With Plate Photo</string>
    <string name="upload_car_back_with_plate_image">Upload Car Back With Plate Photo</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="empty_stores">No stores</string>
    <string name="empty_offers">No offers</string>
    <string name="empty_products">No products</string>
    <string name="empty_categories">No categories</string>
    <string name="empty_complaints">No complaints</string>
    <string name="empty_services">No services</string>
    <string name="empty_notifications">No notifications</string>
    <string name="empty_orders">No orders</string>
    <string name="empty_addresses">No addresses</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="conc_see_all">See All (%d)</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="conc_two_strings" translatable="false">%s %s</string>
    <string name="format_price_with_currency" translatable="false">%.02f %s</string>
    <string name="symbol_plus" translatable="false">+</string>
    <string name="symbol_minus" translatable="false">-</string>
    <string name="conc_offer">%.2f%% Off</string>
    <string name="conc_fixed_offer">%.2f %s Off</string>
    <string name="conc_quantity_with_measuring_unit" translatable="false">%d %s</string>
    <string name="latest_products">Latest Products</string>
    <string name="best_selling">Best Selling</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="stores">Stores</string>
    <string name="minimum_rating">Minimum Rating</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_5" translatable="false">5</string>
    <string name="_4" translatable="false">4</string>
    <string name="_3" translatable="false">3</string>
    <string name="price_range">Price Range</string>
    <string name="min">Min</string>
    <string name="_0" translatable="false">0</string>
    <string name="_9999" translatable="false">9999</string>
    <string name="max">Max</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="apply">Apply</string>
    <string name="specific_category">Specific Category</string>
    <string name="browse">Browse</string>
    <string name="size">Size</string>
    <string name="flavour">Flavour</string>
    <string name="color">Color</string>
    <string name="full_description">Full Description</string>
    <string name="similar_products">Similar Products</string>
    <string name="similar_services">Similar Services</string>
    <string name="reviews">Reviews</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="was_this_review_helpful">Was this review helpful?</string>
    <string name="format_standard_date" translatable="false">dd/MM/yyyy</string>
    <string name="empty_reviews">No reviews</string>
    <string name="empty_comments">No comments</string>
    <string name="qty">QTY</string>
    <string name="add_to_card">Add to Cart</string>
    <string name="format_integer" translatable="false">%d</string>
    <string name="added_to_card">Added to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="cart_total">Cart Total</string>
    <string name="cart">Cart</string>
    <string name="empty_items">No items</string>
    <string name="sub_total">Sub Total</string>
    <string name="vat">VAT</string>
    <string name="sort_by">Sort By</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="shipping_fees_will_be_added">Shipping fees will be added</string>
    <string name="total_">Total:</string>
    <string name="refund_">Refund:</string>
    <string name="shipping_cost_">Shipping cost:</string>
    <string name="details">Details</string>
    <string name="shipping">Shipping</string>
    <string name="confirmation">Confirmation</string>
    <string name="delivery_to">Delivery To</string>
    <string name="add_new_location">Add New Location</string>
    <string name="next">Next</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="conc_x" translatable="false">x%d</string>
    <string name="coupon">Coupon</string>
    <string name="track_order">Track Order</string>
    <string name="disabled">Disabled</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="order_placed">Order Placed</string>
    <string name="msg_order_placed">We Have Received Your Order</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_to_customer">Delivered to customer</string>
    <string name="delivered_to_shop">Delivered to shop</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="conc_estimated_for">Estimated for %s</string>
    <string name="my_account">My Account</string>
    <string name="edit">Edit</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_favourite">My Favourite</string>
    <string name="customer_support">Customer Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="conc_order_">Order #%d</string>
    <string name="conc_return_no_">Return No #%d</string>
    <string name="conc_associated_order_">Associated order number %d</string>
    <string name="conc_order_id_">Order ID: %d</string>
    <string name="format_order_date_time" translatable="false">dd/MM/yyyy hh:mm a</string>
    <string name="conc_items_in_order">%d items in order</string>
    <string name="total_item">Total Items</string>
    <string name="total_vat">Total VAT</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="question_sure_cancel">Do you want to cancel the order?</string>
    <string name="question_sure_reject">Do you want to reject the order?</string>
    <string name="amount_will_be_refunded_to_your_wallet">Amount will be refunded to your wallet.</string>
    <string name="rate_order">Rate order</string>
    <string name="view_rate">View rate</string>
    <string name="complaint">Complaint</string>
    <string name="complaints">Complaints</string>
    <string name="format_date_order_tracking" translatable="false">yyyy-mm-dd hh:mm aa</string>
    <string name="turn_push_notification_on">Turn Push Notification ON/OFF</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="symbol_password" translatable="false">*******</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="or">OR</string>
    <string name="add_money">Add Money</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="transaction_list">Transaction List</string>
    <string name="replacement">Redeam</string>
    <string name="conc_points_equal_currency">You have %d points = %.2f %s</string>
    <string name="msg_deposit">Money Added to Wallet via Payment Gateway</string>
    <string name="msg_withdraw">Money Withdraw and Sent to Bank Account</string>
    <string name="msg_to_your_account">Money Transferred to Your Bank Account</string>
    <string name="description">Description</string>
    <string name="english">English</string>
    <string name="text_do_not_have_account">You don\'t have an account? Register</string>
    <string name="arabic">Arabic</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="verification_code">Verification Code</string>
    <string name="package_settings">Package Settings</string>
    <string name="cm">CM</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="select_language">Select language</string>
</resources>