<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="32dp"
    android:maxWidth="332dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3sp"
            android:text="@string/package_settings"
            android:textColor="@color/bluish"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lengthTil"
            style="@style/ProjectTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView11"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView11"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView11"
            app:suffixText="@string/cm">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProjectTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/length"
                android:imeOptions="actionNext"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/widthTil"
            style="@style/ProjectTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/lengthTil"
            app:layout_constraintStart_toStartOf="@+id/lengthTil"
            app:layout_constraintTop_toBottomOf="@+id/lengthTil"
            app:suffixText="@string/cm">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProjectTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/width"
                android:imeOptions="actionNext"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightTil"
            style="@style/ProjectTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/lengthTil"
            app:layout_constraintStart_toStartOf="@+id/lengthTil"
            app:layout_constraintTop_toBottomOf="@+id/widthTil"
            app:suffixText="@string/cm">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProjectTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:imeOptions="actionNext"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightTil"
            style="@style/ProjectTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/lengthTil"
            app:layout_constraintStart_toStartOf="@+id/lengthTil"
            app:layout_constraintTop_toBottomOf="@+id/heightTil"
            app:suffixText="@string/kg">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProjectTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:imeOptions="actionNext"
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTil"
            style="@style/ProjectTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/lengthTil"
            app:layout_constraintStart_toStartOf="@+id/lengthTil"
            app:layout_constraintTop_toBottomOf="@+id/weightTil">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProjectTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="start"
                android:hint="@string/description"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveBtn"
            style="@style/ProjectPurpleFilledButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/negativeBtn"
            app:layout_constraintStart_toStartOf="@+id/lengthTil"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTil" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negativeBtn"
            style="@style/ProjectPurpleStrokeButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/positiveBtn"
            app:layout_constraintEnd_toEndOf="@+id/lengthTil"
            app:layout_constraintStart_toEndOf="@+id/positiveBtn"
            app:layout_constraintTop_toTopOf="@+id/positiveBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>