<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialog.LocaleBottomSheetDialogFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:text="@string/select_language"
        android:textColor="#3b3d3f"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/englishBtn"
        style="@style/TextBottomSheetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="16dp"
        android:text="@string/english"
        android:textColor="@color/charcoal_grey"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/gradient_divider"
        app:layout_constraintEnd_toEndOf="@+id/englishBtn"
        app:layout_constraintStart_toStartOf="@+id/englishBtn"
        app:layout_constraintTop_toBottomOf="@+id/englishBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/arabicBtn"
        style="@style/TextBottomSheetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingVertical="16dp"
        android:text="@string/arabic"
        app:layout_constraintEnd_toEndOf="@+id/englishBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/englishBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="21sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:paddingVertical="12dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        app:cornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arabicBtn"
        app:rippleColor="@android:color/darker_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>