<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="32dp"
    android:maxWidth="332dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/stc_pay_coloured" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="3sp"
            android:text="@string/enter_verification_code"
            android:textColor="#818181"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconIv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verificationCodeTIl"
            style="@style/ProjectTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/appCompatTextView11"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView11"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView11">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ProjectTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positiveBtn"
            style="@style/ProjectPurpleFilledButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/negativeBtn"
            app:layout_constraintStart_toStartOf="@+id/verificationCodeTIl"
            app:layout_constraintTop_toBottomOf="@+id/verificationCodeTIl" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/negativeBtn"
            style="@style/ProjectPurpleStrokeButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/positiveBtn"
            app:layout_constraintEnd_toEndOf="@+id/verificationCodeTIl"
            app:layout_constraintStart_toEndOf="@+id/positiveBtn"
            app:layout_constraintTop_toTopOf="@+id/positiveBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>